[package]
name = "takeout-exif-fix"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
filetime = "0.2"
kamadak-exif = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
chrono = "0.4"
pretty_env_logger = "0.4"
log = "0.4"